--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <body>
         <h1>CryptoChecker3000</h1>
-        <div class="result"></div>
+        <div class="result">
+        </div>
 </body>
 </html>
