--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
     <title>CryptoChecker3000</title>
@@ -12,7 +12,15 @@
 <body>
     <body>
         <h1>CryptoChecker3000</h1>
+        <form>
+            <label for="searchTerm">Search for ID</label>
+            <input class="u-full-width" type="text" id="searchTerm" name="searchTerm" placeholder="e.g.: btc,eth,ada">
+            <button type="submit">Search</button>
+          </form>
+
+
         <div class="result">
         </div>
 </body>
 </html>
+
